--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-01 01:43+0300\n"
-"PO-Revision-Date: 2022-10-02 14:33+0300\n"
+"PO-Revision-Date: 2022-10-02 15:31+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: de\n"
@@ -181,7 +181,7 @@ msgstr "hochladen"
 
 #: player/templates/player/redesign/overview.html:34
 msgid "обзор"
-msgstr "Übersicht"
+msgstr "Startseite"
 
 #: player/templates/player/redesign/overview.html:48
 msgid "чат"
@@ -222,12 +222,12 @@ msgstr "Parteien"
 #: player/templates/player/redesign/overview.html:297
 msgctxt "overview"
 msgid "государства"
-msgstr "Staaten"
+msgstr "im Staat"
 
 #: player/templates/player/redesign/overview.html:297
 msgctxt "overview"
 msgid "региона"
-msgstr "Region"
+msgstr "in der Region"
 
 #: player/templates/player/redesign/overview.html:334
 #: player/templates/player/redesign/overview.html:379
