--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-04 19:18+0300\n"
-"PO-Revision-Date: 2022-10-04 21:09+0300\n"
+"PO-Revision-Date: 2022-10-05 12:52+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: de\n"
@@ -397,7 +397,7 @@ msgstr "verlassen"
 #: player/templates/player/redesign/player_repost.html:33
 msgctxt "repost"
 msgid "Получить"
-msgstr "Gold erhalten"
+msgstr "Erhalte"
 
 #: player/templates/player/redesign/player_repost.html:48
 msgctxt "repost"
@@ -449,9 +449,6 @@ msgstr "Region des Wohnorts"
 
 #: player/templates/player/redesign/profile.html:205
 #: player/templates/player/redesign/view_profile.html:94
-#, fuzzy
-#| msgctxt "menu"
-#| msgid "партия"
 msgid "партия"
 msgstr "Partei"
 
