--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-04 19:18+0300\n"
-"PO-Revision-Date: 2022-10-04 19:19+0300\n"
+"PO-Revision-Date: 2022-10-05 12:25+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -397,7 +397,7 @@ msgstr "Quit"
 #: player/templates/player/redesign/player_repost.html:33
 msgctxt "repost"
 msgid "Получить"
-msgstr "Get gold"
+msgstr "Get"
 
 #: player/templates/player/redesign/player_repost.html:48
 msgctxt "repost"
