--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-11 16:06+0300\n"
-"PO-Revision-Date: 2022-10-11 16:07+0300\n"
+"PO-Revision-Date: 2022-10-11 16:46+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: de\n"
@@ -434,7 +434,7 @@ msgstr "Du hast kein Premium aktiviert"
 #: player/templates/player/redesign/profile.html:175
 msgctxt "profile"
 msgid "место в рейтинге"
-msgstr "Wertungsplatz"
+msgstr "Rangliste"
 
 #: player/templates/player/redesign/profile.html:182
 #: player/templates/player/redesign/view_profile.html:64
